PROJECT(TrinityCell)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0005 OLD)

#FIND_PACKAGE(Boost COMPONENTS thread regex system filesystem REQUIRED)
IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
ENDIF()
IF(MSVC)
    SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "/EHsc")
ENDIF(MSVC)
ADD_SUBDIRECTORY(src ${CMAKE_CURRENT_BINARY_DIR}/bin)
#ADD_SUBDIRECTORY(test ${CMAKE_CURRENT_BINARY_DIR}/bin)
