SET(CELL_SRC 
 	audio_source.cpp
	audio_source.h
	camera.cpp
	camera.h
	component.cpp
	component.h
	component_manager.cpp
	component_manager.h
	component_types.h
	context.cpp
	context.h
	entity_system.cpp
	entity_system.h
	input_system.cpp
	input_system.h
	instance_pool.cpp
	instance_pool.h
	light.cpp
	light.h
	logger.cpp
	logger.h
	main.cpp
	particle_effect.cpp
	particle_effect.h
	render_system.cpp
	render_system.h
	renderable.cpp
	renderable.h
	timer.cpp
	timer.h
    transform.cpp
    transform.h
)

ADD_EXECUTABLE(CellCore ${CELL_SRC})
